--- a/index.html
+++ b/index.html
@@ -289,54 +289,62 @@
             </div>
         </section>
 
-        <!-- Social Proof Bar -->
+        <!-- Social Proof Bar: Simple Carousel -->
         <section class="py-12 bg-surface border-y border-slate-100 overflow-hidden relative">
             <div class="container mx-auto px-6">
-                <p class="text-center text-xs md:text-sm font-bold text-slate-400 uppercase tracking-[0.3em] mb-12">Institutional Partnership Network</p>
+                <p class="text-center text-xs md:text-sm font-bold text-slate-400 uppercase tracking-[0.3em] mb-10">Institutional Partnership Network</p>
                 
                 <div class="relative group">
-                    <!-- Gradient Masks -->
+                    <!-- Subtle Gradient Masks -->
                     <div class="absolute inset-y-0 left-0 w-24 md:w-40 bg-gradient-to-r from-surface to-transparent z-10 pointer-events-none"></div>
                     <div class="absolute inset-y-0 right-0 w-24 md:w-40 bg-gradient-to-l from-surface to-transparent z-10 pointer-events-none"></div>
                     
                     <div class="flex overflow-hidden">
-                        <div class="marquee-track">
-                            <!-- Set 1 -->
-                            <div class="flex items-center gap-8 md:gap-16 pr-8 md:pr-16">
-                                <div class="group/logo flex items-center gap-3 px-6 md:px-8 py-4 bg-white/50 backdrop-blur-sm rounded-xl border border-slate-100 hover:border-brand/20 transition-all duration-500 hover:shadow-xl hover:shadow-brand/5">
-                                    <i data-lucide="shield-check" class="w-5 h-5 md:w-6 md:h-6 text-brand"></i>
-                                    <span class="font-bold text-sm md:text-lg tracking-tight text-slate-400 group-hover/logo:text-slate-900 transition-colors">TECHCORE <span class="text-brand/50">SYSTEMS</span></span>
+                        <div class="marquee-track flex items-center">
+                            <!-- Logo Set 1 -->
+                            <div class="flex items-center gap-12 md:gap-24 px-6 md:px-12">
+                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
+                                    <i data-lucide="shield-check" class="w-6 h-6 text-brand"></i>
+                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">TECHCORE</span>
                                 </div>
-                                <div class="group/logo flex items-center gap-3 px-6 md:px-8 py-4 bg-white/50 backdrop-blur-sm rounded-xl border border-slate-100 hover:border-gold/20 transition-all duration-500 hover:shadow-xl hover:shadow-gold/5">
-                                    <i data-lucide="zap" class="w-5 h-5 md:w-6 md:h-6 text-gold"></i>
-                                    <span class="font-bold text-sm md:text-lg tracking-tight text-slate-400 group-hover/logo:text-slate-900 transition-colors">ENERGY <span class="italic font-black text-gold/50">PLUS</span></span>
+                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
+                                    <i data-lucide="zap" class="w-6 h-6 text-gold"></i>
+                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">ENERGY PLUS</span>
                                 </div>
-                                <div class="group/logo flex items-center gap-3 px-6 md:px-8 py-4 bg-white/50 backdrop-blur-sm rounded-xl border border-slate-100 hover:border-success/20 transition-all duration-500 hover:shadow-xl hover:shadow-success/5">
-                                    <i data-lucide="globe" class="w-5 h-5 md:w-6 md:h-6 text-success"></i>
-                                    <span class="font-bold text-sm md:text-lg tracking-tight text-slate-400 group-hover/logo:text-slate-900 transition-colors">GLOBEX</span>
+                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
+                                    <i data-lucide="globe" class="w-6 h-6 text-success"></i>
+                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">GLOBEX</span>
                                 </div>
-                                <div class="group/logo flex items-center gap-3 px-6 md:px-8 py-4 bg-white/50 backdrop-blur-sm rounded-xl border border-slate-100 hover:border-primary/20 transition-all duration-500 hover:shadow-xl hover:shadow-primary/5">
-                                    <i data-lucide="verified" class="w-5 h-5 md:w-6 md:h-6 text-primary"></i>
-                                    <span class="font-bold text-sm md:text-lg tracking-tight text-slate-400 group-hover/logo:text-slate-900 transition-colors">PRIME <span class="font-light tracking-widest text-primary/50">GLOBAL</span></span>
+                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
+                                    <i data-lucide="briefcase" class="w-6 h-6 text-primary"></i>
+                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">PRIME GLOBAL</span>
+                                </div>
+                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
+                                    <i data-lucide="cpu" class="w-6 h-6 text-brand"></i>
+                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">SMART ASSETS</span>
                                 </div>
                             </div>
-                            <!-- Duplicated -->
-                             <div class="flex items-center gap-8 md:gap-16 pr-8 md:pr-16">
-                                <div class="group/logo flex items-center gap-3 px-6 md:px-8 py-4 bg-white/50 backdrop-blur-sm rounded-xl border border-slate-100 hover:border-brand/20 transition-all duration-500 hover:shadow-xl hover:shadow-brand/5">
-                                    <i data-lucide="shield-check" class="w-5 h-5 md:w-6 md:h-6 text-brand"></i>
-                                    <span class="font-bold text-sm md:text-lg tracking-tight text-slate-400 group-hover/logo:text-slate-900 transition-colors">TECHCORE <span class="text-brand/50">SYSTEMS</span></span>
+                            <!-- Duplicated for loop -->
+                            <div class="flex items-center gap-12 md:gap-24 px-6 md:px-12">
+                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
+                                    <i data-lucide="shield-check" class="w-6 h-6 text-brand"></i>
+                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">TECHCORE</span>
                                 </div>
-                                <div class="group/logo flex items-center gap-3 px-6 md:px-8 py-4 bg-white/50 backdrop-blur-sm rounded-xl border border-slate-100 hover:border-gold/20 transition-all duration-500 hover:shadow-xl hover:shadow-gold/5">
-                                    <i data-lucide="zap" class="w-5 h-5 md:w-6 md:h-6 text-gold"></i>
-                                    <span class="font-bold text-sm md:text-lg tracking-tight text-slate-400 group-hover/logo:text-slate-900 transition-colors">ENERGY <span class="italic font-black text-gold/50">PLUS</span></span>
+                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
+                                    <i data-lucide="zap" class="w-6 h-6 text-gold"></i>
+                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">ENERGY PLUS</span>
                                 </div>
-                                <div class="group/logo flex items-center gap-3 px-6 md:px-8 py-4 bg-white/50 backdrop-blur-sm rounded-xl border border-slate-100 hover:border-success/20 transition-all duration-500 hover:shadow-xl hover:shadow-success/5">
-                                    <i data-lucide="globe" class="w-5 h-5 md:w-6 md:h-6 text-success"></i>
-                                    <span class="font-bold text-sm md:text-lg tracking-tight text-slate-400 group-hover/logo:text-slate-900 transition-colors">GLOBEX</span>
+                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
+                                    <i data-lucide="globe" class="w-6 h-6 text-success"></i>
+                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">GLOBEX</span>
                                 </div>
-                                <div class="group/logo flex items-center gap-3 px-6 md:px-8 py-4 bg-white/50 backdrop-blur-sm rounded-xl border border-slate-100 hover:border-primary/20 transition-all duration-500 hover:shadow-xl hover:shadow-primary/5">
-                                    <i data-lucide="verified" class="w-5 h-5 md:w-6 md:h-6 text-primary"></i>
-                                    <span class="font-bold text-sm md:text-lg tracking-tight text-slate-400 group-hover/logo:text-slate-900 transition-colors">PRIME <span class="font-light tracking-widest text-primary/50">GLOBAL</span></span>
+                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
+                                    <i data-lucide="briefcase" class="w-6 h-6 text-primary"></i>
+                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">PRIME GLOBAL</span>
+                                </div>
+                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
+                                    <i data-lucide="cpu" class="w-6 h-6 text-brand"></i>
+                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">SMART ASSETS</span>
                                 </div>
                             </div>
                         </div>
