added carousel images

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             </div>
         </section>
 
-        <!-- Social Proof Bar: Simple Carousel -->
+        <!-- Social Proof Bar: Institutional Partnerships -->
         <section class="py-12 bg-surface border-y border-slate-100 overflow-hidden relative">
             <div class="container mx-auto px-6">
                 <p class="text-center text-xs md:text-sm font-bold text-slate-400 uppercase tracking-[0.3em] mb-10">Institutional Partnership Network</p>
@@ -300,52 +300,30 @@
                     <div class="absolute inset-y-0 right-0 w-24 md:w-40 bg-gradient-to-l from-surface to-transparent z-10 pointer-events-none"></div>
                     
                     <div class="flex overflow-hidden">
-                        <div class="marquee-track flex items-center">
+                        <div class="marquee-track flex items-center flex-nowrap">
                             <!-- Logo Set 1 -->
-                            <div class="flex items-center gap-12 md:gap-24 px-6 md:px-12">
-                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
-                                    <i data-lucide="shield-check" class="w-6 h-6 text-brand"></i>
-                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">TECHCORE</span>
-                                </div>
-                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
-                                    <i data-lucide="zap" class="w-6 h-6 text-gold"></i>
-                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">ENERGY PLUS</span>
-                                </div>
-                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
-                                    <i data-lucide="globe" class="w-6 h-6 text-success"></i>
-                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">GLOBEX</span>
-                                </div>
-                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
-                                    <i data-lucide="briefcase" class="w-6 h-6 text-primary"></i>
-                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">PRIME GLOBAL</span>
-                                </div>
-                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
-                                    <i data-lucide="cpu" class="w-6 h-6 text-brand"></i>
-                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">SMART ASSETS</span>
-                                </div>
+                            <div class="flex items-center gap-16 md:gap-32 px-8 md:px-16 flex-shrink-0">
+                                <img src="images/MFZ-logo-01-1536x1086-1-300x212.webp" alt="MFZ" class="h-10 md:h-12 w-auto object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
+                                <img src="images/Noor-Ride-Transparent-01-300x225.png" alt="Noor Ride" class="h-10 md:h-12 w-auto object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
+                                <img src="images/WhatsApp_Image_2023-12-27_at_12.56.51_e9e64087-removebg-preview-300x78.png" alt="Policy Bazaar" class="h-10 md:h-12 w-auto object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
+                                <img src="images/SAAL-Consulting-details.jpeg-150x150.jpg" alt="SAAL" class="h-10 md:h-12 w-auto rounded-full object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
+                                <img src="images/juggernot-1-300x300.jpg" alt="Juggernot" class="h-10 md:h-12 w-auto rounded-lg object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
+                                <img src="images/2.webp" alt="Meydan" class="h-10 md:h-12 w-auto object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
+                                <img src="images/3.webp" alt="Partner 3" class="h-10 md:h-12 w-auto object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
+                                <img src="images/4.webp" alt="Partner 4" class="h-10 md:h-12 w-auto object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
+                                <img src="images/6.webp" alt="Partner 6" class="h-10 md:h-12 w-auto object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
                             </div>
                             <!-- Duplicated for loop -->
-                            <div class="flex items-center gap-12 md:gap-24 px-6 md:px-12">
-                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
-                                    <i data-lucide="shield-check" class="w-6 h-6 text-brand"></i>
-                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">TECHCORE</span>
-                                </div>
-                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
-                                    <i data-lucide="zap" class="w-6 h-6 text-gold"></i>
-                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">ENERGY PLUS</span>
-                                </div>
-                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
-                                    <i data-lucide="globe" class="w-6 h-6 text-success"></i>
-                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">GLOBEX</span>
-                                </div>
-                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
-                                    <i data-lucide="briefcase" class="w-6 h-6 text-primary"></i>
-                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">PRIME GLOBAL</span>
-                                </div>
-                                <div class="flex items-center gap-2 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-105 cursor-default whitespace-nowrap">
-                                    <i data-lucide="cpu" class="w-6 h-6 text-brand"></i>
-                                    <span class="font-bold text-lg md:text-xl tracking-tighter text-slate-900">SMART ASSETS</span>
-                                </div>
+                            <div class="flex items-center gap-16 md:gap-32 px-8 md:px-16 flex-shrink-0">
+                                <img src="images/MFZ-logo-01-1536x1086-1-300x212.webp" alt="MFZ" class="h-10 md:h-12 w-auto object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
+                                <img src="images/Noor-Ride-Transparent-01-300x225.png" alt="Noor Ride" class="h-10 md:h-12 w-auto object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
+                                <img src="images/WhatsApp_Image_2023-12-27_at_12.56.51_e9e64087-removebg-preview-300x78.png" alt="Policy Bazaar" class="h-10 md:h-12 w-auto object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
+                                <img src="images/SAAL-Consulting-details.jpeg-150x150.jpg" alt="SAAL" class="h-10 md:h-12 w-auto rounded-full object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
+                                <img src="images/juggernot-1-300x300.jpg" alt="Juggernot" class="h-10 md:h-12 w-auto rounded-lg object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
+                                <img src="images/2.webp" alt="Meydan" class="h-10 md:h-12 w-auto object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
+                                <img src="images/3.webp" alt="Partner 3" class="h-10 md:h-12 w-auto object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
+                                <img src="images/4.webp" alt="Partner 4" class="h-10 md:h-12 w-auto object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
+                                <img src="images/6.webp" alt="Partner 6" class="h-10 md:h-12 w-auto object-contain flex-shrink-0 grayscale hover:grayscale-0 transition-all duration-500 opacity-40 hover:opacity-100 hover:scale-110">
                             </div>
                         </div>
                     </div>
