--- a/index.html
+++ b/index.html
@@ -134,22 +134,24 @@
     <div class="max-w-[1280px] mx-auto bg-surface shadow-2xl relative min-h-screen">
         <!-- Navigation -->
         <header class="sticky top-0 w-full z-50 glass-header">
-            <nav class="container mx-auto px-6 py-4 flex items-center justify-between">
-                <div class="flex items-center text-2xl font-bold tracking-tight text-primary">
-                    <span class="text-brand">SET</span>KORP
+            <nav class="container mx-auto px-6 py-4 flex items-center">
+                <!-- Logo Group -->
+                <div class="flex-1 flex items-center">
+                    <div class="flex items-center text-2xl font-bold tracking-tight text-primary">
+                        <span class="text-brand">SET</span>KORP
+                    </div>
                 </div>
                 
+                <!-- Navigation Links - Centered -->
                 <div class="hidden lg:flex items-center gap-8 text-sm font-medium">
+                    <a href="#industries" class="hover:text-brand transition-colors">Industries</a>
                     <a href="#services" class="hover:text-brand transition-colors">Services</a>
-                    <a href="#expertise" class="hover:text-brand transition-colors">Expertise</a>
-                    <a href="#how-it-works" class="hover:text-brand transition-colors">Process</a>
-                    <a href="#faq" class="hover:text-brand transition-colors">FAQ</a>
+                    <a href="#how-it-works" class="hover:text-brand transition-colors">How It Works</a>
+                    <a href="#faq" class="hover:text-brand transition-colors">FAQs</a>
                 </div>
 
-                <div class="flex items-center gap-4">
-                    <a href="tel:+123456789" class="hidden xl:flex text-sm font-semibold hover:text-brand">
-                        <i data-lucide="phone" class="w-4 h-4 mr-2"></i> Support
-                    </a>
+                <!-- Actions Group -->
+                <div class="flex-1 flex items-center justify-end gap-4">
                     <a href="#contact" class="hidden sm:flex bg-gradient-to-r from-brand to-brandhover text-white px-6 py-2.5 rounded-lg text-sm font-semibold hover:shadow-xl transition-all shadow-lg shadow-brand/20">
                         Book Strategy Call
                     </a>
@@ -172,10 +174,10 @@
                 </div>
                 
                 <div class="flex flex-col gap-6 text-lg font-semibold text-slate-700">
+                    <a href="#industries" class="mobile-link py-2 border-b border-slate-50">Industries</a>
                     <a href="#services" class="mobile-link py-2 border-b border-slate-50">Services</a>
-                    <a href="#expertise" class="mobile-link py-2 border-b border-slate-50">Expertise</a>
-                    <a href="#how-it-works" class="mobile-link py-2 border-b border-slate-50">Process</a>
-                    <a href="#faq" class="mobile-link py-2 border-b border-slate-50">FAQ</a>
+                    <a href="#how-it-works" class="mobile-link py-2 border-b border-slate-50">How It Works</a>
+                    <a href="#faq" class="mobile-link py-2 border-b border-slate-50">FAQs</a>
                 </div>
 
                 <div class="mt-auto pt-8">
@@ -224,7 +226,7 @@
         </section>
 
         <!-- Welcome Section -->
-        <section class="py-12 md:py-24 bg-surface">
+        <section id="industries" class="py-12 md:py-24 bg-surface">
             <div class="container mx-auto">
                 <div class="max-w-6xl mx-auto">
                     <!-- Welcome Header -->
@@ -1108,10 +1110,10 @@
                 <div>
                     <h4 class="font-bold mb-6 uppercase tracking-widest text-xs text-brand">Quick Links</h4>
                     <ul class="space-y-4 text-slate-400 text-sm">
+                        <li><a href="#industries" class="hover:text-brand transition-colors">Industries</a></li>
                         <li><a href="#services" class="hover:text-brand transition-colors">Services</a></li>
-                        <li><a href="#expertise" class="hover:text-brand transition-colors">Industry Expertise</a></li>
-                        <li><a href="#how-it-works" class="hover:text-brand transition-colors">Process</a></li>
-                        <li><a href="#faq" class="hover:text-brand transition-colors">FAQ</a></li>
+                        <li><a href="#how-it-works" class="hover:text-brand transition-colors">How It Works</a></li>
+                        <li><a href="#faq" class="hover:text-brand transition-colors">FAQs</a></li>
                     </ul>
                 </div>
                 <div>
