--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
         }
         /* Mobile Menu */
         #mobile-menu {
-            transform: translateX(100%);
+            transform: translateY(-100%);
             transition: transform 0.4s cubic-bezier(0.16, 1, 0.3, 1);
         }
         #mobile-menu.active {
-            transform: translateX(0);
+            transform: translateY(0);
         }
         /* Testimonial Marquee Animation */
         @keyframes marquee {
@@ -162,8 +162,8 @@
                 </div>
             </nav>
 
-            <!-- Mobile Menu Sidebar -->
-            <div id="mobile-menu" class="fixed inset-y-0 right-0 w-[280px] bg-white shadow-2xl z-[60] lg:hidden flex flex-col p-8">
+            <!-- Mobile Menu Dropdown -->
+            <div id="mobile-menu" class="fixed top-0 left-0 right-0 w-full bg-white shadow-2xl z-[60] lg:hidden flex flex-col p-8 pt-24">
                 <div class="flex justify-between items-center mb-12">
                     <div class="text-xl font-bold tracking-tight text-primary">
                         <span class="text-brand">SET</span>KORP
@@ -196,13 +196,15 @@
         <!-- Hero Section with Video Background -->
         <section class="relative h-screen overflow-hidden -mt-16 md:-mt-20">
             <!-- Video Background -->
-            <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover object-top" style="background-color: #FDFDFD;">
-                <source src="hero-section-video.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+            <div class="absolute inset-0 px-6 md:px-0">
+                <video autoplay muted loop playsinline class="w-full h-full object-contain object-center rounded-2xl md:rounded-none" style="background-color: #FDFDFD;">
+                    <source src="hero-section-video.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
             
             <!-- Content Container - Buttons Only -->
-            <div class="relative h-full flex items-end justify-center pb-4 md:pb-8">
+            <div class="relative h-full flex items-end justify-center pb-16 md:pb-8">
                 <div class="container mx-auto px-6">
                     <div class="flex flex-col sm:flex-row items-center justify-center gap-4 md:gap-6">
                         <!-- Primary CTA -->
@@ -214,7 +216,7 @@
                         </a>
                         
                         <!-- Secondary CTA -->
-                        <a href="#calculator" class="group w-full sm:w-auto bg-white/10 backdrop-blur-md text-white border border-white/20 px-8 md:px-10 py-5 rounded-xl text-base md:text-lg font-bold hover:bg-white/20 hover:-translate-y-1 transition-all duration-300 flex items-center justify-center">
+                        <a href="#calculator" class="group w-full sm:w-auto bg-white/90 backdrop-blur-md text-primary border border-slate-200 px-8 md:px-10 py-5 rounded-xl text-base md:text-lg font-bold hover:bg-white hover:-translate-y-1 transition-all duration-300 flex items-center justify-center shadow-lg">
                             <span class="flex items-center">
                                 <div class="w-2 h-2 bg-brand rounded-full mr-3 animate-pulse"></div>
                                 Setup Cost Calculator
@@ -1157,6 +1159,13 @@
         menuClose?.addEventListener('click', () => toggleMenu(false));
         menuOverlay?.addEventListener('click', () => toggleMenu(false));
         mobileLinks.forEach(link => link.addEventListener('click', () => toggleMenu(false)));
+
+        // Close menu on window resize to desktop
+        window.addEventListener('resize', () => {
+            if (window.innerWidth >= 1024) { // lg breakpoint
+                toggleMenu(false);
+            }
+        });
 
         // Intersection Observer for Reveal animations
         const revealCallback = (entries, observer) => {
