--- a/index.html
+++ b/index.html
@@ -194,31 +194,31 @@
 
     <main>
         <!-- Hero Section with Video Background -->
-        <section class="relative h-screen overflow-hidden md:-mt-20">
+        <section class="relative h-[85vh] md:h-screen overflow-hidden md:-mt-20">
             <!-- Video Background -->
-            <div class="absolute inset-0 px-5 md:px-0">
-                <video autoplay muted loop playsinline class="w-full h-full object-contain object-center scale-[1.2] md:scale-100" style="background-color: #FDFDFD;">
+            <div class="absolute inset-0 flex items-center justify-center md:block">
+                <video autoplay muted loop playsinline class="w-full h-auto max-h-[60vh] md:h-full md:max-h-none object-contain scale-[1.15] md:scale-100" style="background-color: #FDFDFD;">
                     <source src="hero-section-video.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
             
             <!-- Content Container - Buttons Only -->
-            <div class="relative h-full flex items-start md:items-end justify-center pt-[calc(100vh-280px)] md:pt-0 md:pb-8">
-                <div class="container mx-auto px-6">
-                    <div class="flex flex-col sm:flex-row items-center justify-center gap-4 md:gap-6">
+            <div class="relative h-full flex items-end justify-center pb-8 md:pb-8">
+                <div class="container mx-auto px-4">
+                    <div class="flex flex-col sm:flex-row items-center justify-center gap-3 md:gap-6">
                         <!-- Primary CTA -->
-                        <a href="#contact" class="group w-full sm:w-auto bg-gradient-to-r from-brand to-brandhover text-white px-8 md:px-10 py-5 rounded-xl text-base md:text-lg font-black transition-all duration-300 shadow-[0_20px_40px_-12px_rgba(227,88,77,0.4)] hover:shadow-[0_30px_60px_-12px_rgba(227,88,77,0.5)] hover:-translate-y-1 ring-1 ring-white/20 ring-inset flex items-center justify-center relative overflow-hidden">
+                        <a href="#contact" class="group w-full sm:w-auto bg-gradient-to-r from-brand to-brandhover text-white px-6 md:px-10 py-4 md:py-5 rounded-xl text-sm md:text-lg font-black transition-all duration-300 shadow-[0_20px_40px_-12px_rgba(227,88,77,0.4)] hover:shadow-[0_30px_60px_-12px_rgba(227,88,77,0.5)] hover:-translate-y-1 ring-1 ring-white/20 ring-inset flex items-center justify-center relative overflow-hidden">
                             <span class="relative z-10 flex items-center">
                                 Book Your Free Strategy Call
-                                <i data-lucide="arrow-right" class="w-5 h-5 ml-2 transition-transform duration-300 group-hover:translate-x-1"></i>
+                                <i data-lucide="arrow-right" class="w-4 h-4 md:w-5 md:h-5 ml-2 transition-transform duration-300 group-hover:translate-x-1"></i>
                             </span>
                         </a>
                         
                         <!-- Secondary CTA -->
-                        <a href="#calculator" class="group w-full sm:w-auto bg-white/90 backdrop-blur-md text-primary border border-slate-200 px-8 md:px-10 py-5 rounded-xl text-base md:text-lg font-bold hover:bg-white hover:-translate-y-1 transition-all duration-300 flex items-center justify-center shadow-lg">
+                        <a href="#calculator" class="group w-full sm:w-auto bg-white/95 backdrop-blur-md text-primary border border-slate-200 px-6 md:px-10 py-4 md:py-5 rounded-xl text-sm md:text-lg font-bold hover:bg-white hover:-translate-y-1 transition-all duration-300 flex items-center justify-center shadow-lg">
                             <span class="flex items-center">
-                                <div class="w-2 h-2 bg-brand rounded-full mr-3 animate-pulse"></div>
+                                <div class="w-2 h-2 bg-brand rounded-full mr-2 animate-pulse"></div>
                                 Setup Cost Calculator
                             </span>
                         </a>
