remove gray background color

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         }
     </style>
 </head>
-<body class="bg-slate-200 text-slate-900 overflow-x-hidden font-sans">
+<body class="bg-white text-slate-900 overflow-x-hidden font-sans">
     <div class="max-w-[1280px] mx-auto bg-surface shadow-2xl relative min-h-screen">
         <!-- Navigation -->
         <header class="sticky top-0 w-full z-50 glass-header">
