--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </style>
 </head>
 <body class="bg-white text-slate-900 overflow-x-hidden font-sans">
-    <div class="max-w-[1280px] mx-auto bg-surface shadow-2xl relative min-h-screen">
+    <div class="max-w-[1280px] mx-auto bg-surface relative min-h-screen">
         <!-- Navigation -->
         <header class="sticky top-0 w-full z-50 glass-header">
             <nav class="container mx-auto px-6 py-4 flex items-center">
