matched background color of a hero section video

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         }
     </style>
 </head>
-<body class="bg-white text-slate-900 overflow-x-hidden font-sans">
+<body class="text-slate-900 overflow-x-hidden font-sans" style="background-color: #FDFDFD;">
     <div class="max-w-[1280px] mx-auto bg-surface relative min-h-screen">
         <!-- Navigation -->
         <header class="sticky top-0 w-full z-50 glass-header">
